trying to get basics working

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -10,9 +10,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Quarter Past</title>
+    <title>Drawing</title>
     
-    <meta name="description" content="A minimalist game in Elm, deployed with Webpack/Gulp"/>
+    <meta name="description" content="A minimalist drawing app"/>
     <meta name="author" content="James Porter"/>
   </head>
   <body>
